# switch-hal

./: Cargo.toml
src/: lib.rs  mock.rs
src/input/: mod.rs
src/output/: mod.rs
tests/: input.rs  output.rs  pin_into_switch.rs
